# mako

./: CMakeLists.txt  README.md  README.txt
Demos/Binaries-Oct22/Media/: EarthShader.cg  Thumbs.db
Demos/EarthVisualization/Media/: CMakeLists.txt
Demos/EarthVisualization/Source/: CMakeLists.txt  EarthVisualization.cpp
Demos/TCPClient/Source/: CMakeLists.txt  TCPClient.cpp
Demos/TCPServer/Source/: CMakeLists.txt  TCPServer.cpp
Doc/: Doxyfile  doc.chm
Extras/3dsMaxMakoMeshExporter/: DllEntry.cpp  GatherMeshInfoProc.cpp  GatherMeshInfoProc.h  MakoMeshExporter.cpp  MakoMeshExporter.def  MakoMeshExporter.h  MakoMeshExporter.rc  MakoMeshExporter.sln  MakoMeshExporter.vcproj  MakoMeshExporterClassDesc.cpp  MakoMeshExporterClassDesc.h  makomeshtypes.h  resource.h
Extras/Testing/: CMakeLists.txt
Extras/Testing/Media/: CMakeLists.txt  Spaceship.MAKOMESH  Spaceship.cg  obj.MAKOMESH
Extras/Testing/Source/: CMakeLists.txt  Testing.cpp
Media/: makoico.psd  makologo.psd  makologo_shorter.psd
Planning/: Scene3dNodeInheritance.dia
Source/: CMakeLists.txt  Mako.cpp  Mako.h  MakoAnimatedMesh.h  MakoApplication.cpp  MakoApplication.h  MakoArrayList.h  MakoAudioDevice.h  MakoBitManipulator.h  MakoCamera.h  MakoCgDevice.h  MakoCgMtl.cpp  MakoCgMtl.h  MakoCgParameters.h  MakoCgShader.h  MakoColor.h  MakoColorMtl.cpp  MakoColorMtl.h  MakoCommon.h  MakoCompileConfig.h  MakoCompiler.h  MakoConsole.h  MakoD3D9CgDevice.cpp  MakoD3D9CgDevice.h  MakoD3D9CgParameters.h  MakoD3D9CgShader.cpp  MakoD3D9CgShader.h  MakoD3D9Device.cpp  MakoD3D9Device.h  MakoD3D9IndexBuffer.cpp  MakoD3D9IndexBuffer.h  MakoD3D9Texture.cpp  MakoD3D9Texture.h  MakoD3D9VertexBuffer.cpp  MakoD3D9VertexBuffer.h  MakoDevice.h  MakoDiffTexMtl.cpp  MakoDiffTexMtl.h  MakoDirectoryPath.h  MakoDynamicBox.h  (+126 more)
Source/jpeglib/: CMakeLists.txt
Source/pnglib/: CMakeLists.txt
Source/zlib/: CMakeLists.txt
